mbtiles/tests/snapshots/copy__databases@flat__bdz.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: bsdiffrawgz
  sql: "CREATE TABLE bsdiffrawgz (\n             zoom_level integer NOT NULL,\n             tile_column integer NOT NULL,\n             tile_row integer NOT NULL,\n             patch_data blob NOT NULL,\n             tile_xxh3_64_hash integer NOT NULL,\n             PRIMARY KEY(zoom_level, tile_column, tile_row))"
  values:
    - "(  5, 1, 1, blob(1B1E00F80799700B0AE100F45284A210A00708A0C03B), -3424150585923931267  )"
    - "(  5, 1, 2, blob(1B2000F8079970D30C62EDF2D8285E11400000BB2F01), -5266223612208071394  )"
    - "(  5, 1, 3, blob(;), 3244421341483603138  )"
    - "(  6, 1, 4, blob(1B1F00F8077163E37063303653B324A12804E8010450E0ED01), 808518166405267028  )"
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"9AFEC3326B465CB939664C47A572D4C6\"  )"
    - "(  \"agg_tiles_hash_after_apply\", \"A18D0C39730FB52E5A547F096F5C60E8\"  )"
    - "(  \"agg_tiles_hash_before_apply\", \"C0CA886B149CE416242AB2AFE8E641AD\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-remove\", NULL  )"
- type: table
  tbl_name: tiles
  sql: "CREATE TABLE tiles (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values:
    - "(  5, 2, 2, NULL  )"
    - "(  5, 2, 3, NULL  )"
    - "(  5, 3, 7, blob(1F8B08000000000000FFCB4B2D07004544E36B03000000)  )"
    - "(  5, 3, 8, blob(1F8B08000000000000FFCB4B2D07004544E36B03000000)  )"
    - "(  6, 2, 6, NULL  )"
- type: index
  tbl_name: bsdiffrawgz
  sql: ~
  values: ~
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles
  sql: ~
  values: ~
