mbtiles/tests/snapshots/copy__databases@flat__dif.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"B86122579EDCDD4C51F3910894FCC1A1\"  )"
    - "(  \"agg_tiles_hash_after_apply\", \"3BCDEE3F52407FF1315629298CB99133\"  )"
    - "(  \"agg_tiles_hash_before_apply\", \"9ED9178D7025276336C783C2B54D6258\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v2\"  )"
    - "(  \"md-new\", \"value - new\"  )"
    - "(  \"md-remove\", NULL  )"
- type: table
  tbl_name: tiles
  sql: "CREATE TABLE tiles (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values:
    - "(  5, 1, 1, blob(edit-v2)  )"
    - "(  5, 1, 2, blob(not-empty)  )"
    - "(  5, 1, 3, blob()  )"
    - "(  5, 2, 2, NULL  )"
    - "(  5, 2, 3, NULL  )"
    - "(  5, 3, 7, blob(new)  )"
    - "(  5, 3, 8, blob(new)  )"
    - "(  6, 1, 4, blob(edit-v2a)  )"
    - "(  6, 2, 6, NULL  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles
  sql: ~
  values: ~
