mbtiles/tests/snapshots/copy__databases@flat__empty-no-hash.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"hash_algorithm\", \"md5\"  )"
- type: table
  tbl_name: tiles
  sql: "CREATE TABLE tiles (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values: []
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles
  sql: ~
  values: ~
